backgroun animation completed, fixed overflow in the body

--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,5 @@
 }
 body{
   background-color: rgb(20, 18, 25);
+  overflow: hidden;
 }
