--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,100 @@
-.homepage{
-    color: white;
-    font-weight: bold;
+.homepage {
+  color: white;
+  font-weight: bold;
 }
+
+.background {
+  position: fixed;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
+.track .plane {
+  position: absolute;
+}
+
+.plane-wrapper {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  
+}
+
+.plane {
+  width: 0%;
+  height: 0%;
+  border: 20px solid transparent;
+  border-bottom: 40px solid white;
+  transform: translateX(92px);
+}
+.plane-tail {
+  position: absolute;
+  border: 20px solid transparent;
+  border-bottom: 10px solid black;
+  top: 10px;
+  transform: translateX(-50%);
+}
+
+.track {
+  width: 600px;
+  height: 600px;
+  border-radius: 50%;
+  border: 2px dashed yellow;
+  filter: blur(1px);
+}
+.track-inner {
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+}
+.track-1 .plane-wrapper {
+  transform: rotate(45deg);
+}
+.track-2 .plane-wrapper{
+  transform: translate(550%, 280%) rotate(-110deg);
+ 
+}
+@keyframes track-2-keyframes {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(-360deg); }
+}
+
+.track-2 .track-inner {
+  animation: track-2-keyframes 4s infinite linear;
+}
+
+.track-2{
+ 
+  position: absolute;
+  bottom: -200px;
+  right: -200px;
+  width: 800px;
+  height: 800px;
+  rotate: 160deg;
+}
+
+
+@keyframes track-1-keyframes {
+  0% {
+    transform: rotate(-40deg);
+  }
+  100% {
+    transform: rotate(320deg);
+  }
+}
+.track-1 .track-inner {
+  animation: track-1-keyframes 4s infinite linear;
+}
+.track-1{
+  position: absolute;
+  top: -300px;
+  left: -100px;
+
+}
+
